src/backend/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: asky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: elisaflemer/asky-auth:latest
        ports:
        - containerPort: 8003
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: asky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      - name: postgres-initdb
        configMap:
          name: postgres-initdb-config

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyxis
  namespace: asky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyxis
  template:
    metadata:
      labels:
        app: pyxis
    spec:
      containers:
      - name: pyxis
        image: elisaflemer/asky-pyxis:latest
        ports:
        - containerPort: 8001
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-management
  namespace: asky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-management
  template:
    metadata:
      labels:
        app: request-management
    spec:
      containers:
      - name: request-management
        image: elisaflemer/asky-request-management:latest
        ports:
        - containerPort: 8001
