src/backend/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - port: 8003
      targetPort: 8003
  selector:
    app: auth

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres

---

apiVersion: v1
kind: Service
metadata:
  name: pyxis
spec:
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: pyxis

---

apiVersion: v1
kind: Service
metadata:
  name: request-management
spec:
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    app: request-management
